# dcx

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  TODO.md  install.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.full.json  devcontainer.json
.devcontainer/full/: Dockerfile  dcx_config.yaml  devcontainer.json  init-firewall.sh
.devcontainer/slim/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  validate-release.yml
specs/: README.md  ROADMAP.md  TASKS.md  TODO.md  architecture.md  clean-command.md  dcx-clean-ux.md  dcx_config.md  docker-helpers.md  failure-recovery.md  mount-strategy.md  setup.md  testing.md
specs/guides/: failure-recovery.md  setup.md  testing.md
specs/impl/: phase-12-clean-ux.md
src/: autostart.rs  categorize.rs  clean.rs  cli.rs  cmd.rs  colima.rs  completions.rs  dcx_config.rs  docker.rs  doctor.rs  down.rs  exec.rs  exit_codes.rs  format.rs  image.rs  logs.rs  main.rs  mount_table.rs  naming.rs  network_mode.rs  platform.rs  progress.rs  signals.rs  status.rs  sync.rs  up.rs  workspace.rs
tests/: cli.rs
tests/e2e/: Dockerfile.test  setup.sh  test_dcx_clean.sh  test_dcx_doctor.sh  test_dcx_down.sh  test_dcx_exec.sh  test_dcx_file_staging.sh  test_dcx_status.sh  test_dcx_up.sh  test_edge_cases.sh  test_network_mode_switch.sh  test_passthrough.sh  test_stale_mounts.sh  test_sync_atomic_writes.sh
