[package]
name = "dcx"
version = "0.1.5"
edition = "2024"
description = "Dynamic workspace mounting wrapper for Colima devcontainers"
homepage = "https://github.com/aroonavm/dcx"
repository = "https://github.com/aroonavm/dcx"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/dcx", "usr/bin/", "755"],
]
